books/audiobookshelf/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  replicas: 1
  serviceName: audiobookshelf
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      nodeName: nereid-1
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: "4"
              memory: 8Gi
          volumeMounts:
            - mountPath: /audiobooks
              name: books
              subPath: audiobooks
            - mountPath: /config
              name: audiobookshelf-config
            - mountPath: /metadata
              name: audiobookshelf-metadata
      volumes:
        - name: books
          persistentVolumeClaim:
            claimName: books
        - name: audiobookshelf-config
          persistentVolumeClaim:
            claimName: audiobookshelf-config
        - name: audiobookshelf-metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata

---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  selector:
    app: audiobookshelf
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
