books/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: audio.books.super.fish
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
  tls:
    - hosts:
        - audio.books.super.fish
      secretName: audio.books.super.fish
